--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/vue-table": "^8.21.3",
     "@unovis/ts": "^1.6.4",
     "@unovis/vue": "^1.6.4",
+    "@vercel/analytics": "^1.6.1",
     "@vueuse/core": "^14.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
