--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@unovis/ts": "^1.6.4",
     "@unovis/vue": "^1.6.4",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "@vueuse/core": "^14.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
